// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders with different props 1`] = `
<div>
  <div
    class="notification notification--warning"
    data-testid="jrc-notification"
  >
    <div
      class="notification__icon-wrapper"
    >
      <div
        class="icon icon--size-sm icon--warning"
      />
    </div>
    <div
      class="notification__text-wrapper"
    >
      <h2
        class="notification__header"
      >
        Header here
      </h2>
      <p
        class="notification__content"
      >
        Some content
      </p>
    </div>
    <button
      aria-label="Close"
      class="notification__close-button"
      data-testid="jrc-notification-close-button"
    >
      X
    </button>
  </div>
</div>
`;

exports[`Notification renders without error 1`] = `
<div>
  <div
    class="notification notification--info"
    data-testid="jrc-notification"
  >
    <div
      class="notification__icon-wrapper"
    >
      <div
        class="icon icon--size-sm icon--info"
      />
    </div>
    <div
      class="notification__text-wrapper"
    >
      <p
        class="notification__content"
      >
        Notification content
      </p>
    </div>
  </div>
</div>
`;
